change host in appsettings and run initial mgrtion

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost:1433; Database=inventory_system_db; Trusted_Connection=true; TrustServerCertificate=true;"
+    "DefaultConnection": "Server=172.17.0.1,1433;Database=inventory_system_db;User=sa;Password=Arigatou123!;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
