--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "1433:1433"
     environment:
       ACCEPT_EULA: Y
-      SA_PASSWORD: Arigatou123!
+      SA_PASSWORD: ${DB_PASSWORD}
       MSSQL_PID: Express
 
 volumes:
