--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
       "type": "process",
       "args": [
         "build",
-        "${workspaceFolder}/inventory-system.csproj",
+        "${workspaceFolder}/backend/inventory-system.csproj",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary"
       ],
@@ -19,7 +19,7 @@
       "type": "process",
       "args": [
         "publish",
-        "${workspaceFolder}/inventory-system.csproj",
+        "${workspaceFolder}/backend/inventory-system.csproj",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary"
       ],
@@ -33,7 +33,7 @@
         "watch",
         "run",
         "--project",
-        "${workspaceFolder}/inventory-system.csproj"
+        "${workspaceFolder}/backend/inventory-system.csproj"
       ],
       "problemMatcher": "$msCompile"
     }
